# Librarian

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Ideas.md  Makefile  New Librarian.sln  README.md  collection_plan.md  docker-compose.yml  plan.md
Librarian/: Dockerfile  Librarian.csproj  MakeMigrations.cmd  MigratePostgres.cmd  Program.cs  RemoveLastMigration.cmd  appsettings.json  compilerconfig.json  make-migrations.sh  migrate.sh  remove-last-migration.sh
Librarian.Core/: Librarian.Core.csproj  ProcessHelper.cs
Librarian.Core/DB/: DatabaseContext.cs  DateTimeOffsetConverter.cs
Librarian.Core/Data/: Datasets.cs  MetadataAttributeAliases.csv  MetadataAttributes.csv
Librarian.Core/Metadata/: MetadataField.cs
Librarian.Core/Model/: AliasRole.cs  ApproximateDateTime.cs  AttributeAlias.cs  AttributeBase.cs  AttributeDefinition.cs  (+33 more)
Librarian.Metadata/: Librarian.Metadata.csproj
Librarian.Metadata.FFMpeg/: Librarian.Metadata.FFMpeg.csproj
MetadataCollector/: Collector.cs  FileInfo.cs  FileMetadata.cs  MetadataCollector.csproj  Models.cs  Options.cs  Program.cs
MetadataParser/: IMetadataParser.cs  WaveFormat.cs  WaveParser.cs
Test/: ArchiveTypesTests.cs  ChecksumServiceTests.cs  ExifToolNamespaceRulesTests.cs  ExifToolProviderTests.cs  FilenameMetadataProviderTests.cs  FolderHeuristicsTests.cs  MediaTypeTests.cs  MetadataNormalizerTests.cs  MetadataSerializerTests.cs  NormalizationUnitsTests.cs  Program.cs  ProviderExecutorTests.cs  RealDataValueParsingTests.cs  SidecarsTests.cs  StructuralNameTests.cs  Test.csproj  ValueCoercerTests.cs  VocabularyTests.cs
meta-cli/: CMakeLists.txt  main.cpp
tools/: make-test-dataset.sh
(+240 files in other folders)
